@@ -1,4 +1,4 @@
-The RISC OS Software Development Kit [GCCSDK GCC 4.7.4 Release 1 - Development]
+The RISC OS Software Development Kit [GCCSDK GCC 4.7.4 Release 2]
 
 This is a lightweight build environment which currently combines GCC 4.7.4
 release, binutils 2.24 release, UnixLib 5.0 into one directory which can be
