@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<h2>Welcome to GCCSDK GCC 4.7.4 Release 2 (Development) for RISC&nbsp;OS</h2>
+<h2>Welcome to GCCSDK GCC 4.7.4 Release 2 for RISC&nbsp;OS</h2>
 <p>
 
 <p>If you have received this copy of GCC from a CD of fetched your copy from the Internet yourself some time ago, then it is likely there is a more up-to-date version obtainable from <a href="http://gccsdk.riscos.info/">http://gccsdk.riscos.info/</a> which is also the homepage of this RISC&nbsp;OS GCC port.
@@ -802,7 +802,7 @@ This is the current ABI version and corresponds to V4.6 and onwards of GCC. Its 
 <p>This port of GCC is:
 <pre>
 Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001 Nick Burrett
-Copyright (c) 2002-2014 GCCSDK Developers
+Copyright (c) 2002-2015 GCCSDK Developers
 </pre>
 
 <p>The GCCSDK releases made by the GCCSDK Developers consists of several binaries and sources which do not necessary have the same licenses.  The following overview can help to identify those licenses more easily but is in no way an authoritative statement on behalf of the GCCSDK Developers:
@@ -824,8 +824,8 @@ Copyright (c) 2002-2014 GCCSDK Developers
 
 <p>Primary GCCSDK Developers today are:
 <ul>
-  <li>John Tytgat - Release management, module support, multilib, libscl integration and allround GCCSDK hacking.
   <li>Lee Noar - Shared library development including ELF loader.
+  <li>Theo Markettos - build system and release management
 </ul>
 
 <p>An enormous amount of porting and testing work was done by Nick Burrett. Without his past contribution GCCSDK wouldn't exist.
